fix date/datetime pickers and be more strict about date input formats to d/m/y

--- a/signalbox/templates/admin/base_site.html
+++ b/signalbox/templates/admin/base_site.html
@@ -22,6 +22,10 @@
 		<script type="text/javascript" src="{{STATIC_URL}}js/mousetrap.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}audiojs/audio.min.js"></script>
 
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.8.21.custom.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-timepicker-addon.js"></script>
+
+
 		<script type="text/javascript">
 		(function($) {
 		    $(document).ready(function() {
