--- a/signalbox/templates/admin/signalbox/reply/change_form.html
+++ b/signalbox/templates/admin/signalbox/reply/change_form.html
@@ -1,15 +1,5 @@
 {% extends "admin/change_form.html" %}
 
-{% block submit_buttons_top %}
-    {{block.super}}
-    <a class="
-    btn btn-warning {% if not request.user.is_superuser %}disabled{%endif%}"
-    href={% if request.user.is_superuser %}"{% url 'reassign_reply_to_observation' original.id %}"{%else%}"javascript:window.alert('You do not habve permission to reassign observations.');"{% endif %}>
-    Reassign to a different observation</a>
-{%endblock%}
-
-
-
 
 {% block content %}
 {% if original %}
@@ -61,7 +51,15 @@
     <li class="">
         <a href="#tabanswers" data-toggle="tab">User answers ({{original.answer_set.all.count}})</a>
     </li>
+    
+    <li class="pull-right">
+        <a class="{% if not request.user.is_superuser %}disabled{%endif%}"
+    href={% if request.user.is_superuser %}"{% url 'reassign_reply_to_observation' original.id %}"{%else%}"javascript:window.alert('You do not habve permission to reassign observations.');"{% endif %}>
+    Reassign to a different observation</a>
+    </li>
     {% endif %}
+
+
 </ul>
 
 
